# OpenWith-Nautilus

./: Cargo.toml  README.md
src/: config.rs  entry.rs  lib.rs  menu_provider.rs
