[package]
name = "open-with-nautilus"
version = "0.1.0"
edition = "2021"

[lib]
name = "open_with_nautilus"
crate-type =  ["dylib"]

[package.metadata.deb]
depends = "libnautilus-extension1a (>= 1:3.2°.0)"
assets = [
    ["target/release/libopenwith_nautilus.so", "usr/lib/nautilus/extensions-3.0/libopenwith-nautilus.so", "644"]
]

[dependencies]
gdk = "0.15.4"
glib = "0.15.12"
glib-sys = "0.15.10"
gobject-sys = "0.15.10"
libc = "0.2"
nautilus-extension = "0.8.0"
dirs = "4.0.0"
serde_json = "1.0.85"

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

[dependencies.gtk]
version = "0.15.5"
features = ["v3_20"]

[dependencies.gtk-sys]
version = "0.15.3"
features = ["v3_20"]
